tests/baselines/reference/circularModuleImports.errors.txt
circularModuleImports.ts(5,5): error TS2303: Circular definition of import alias 'A'.


==== circularModuleImports.ts (1 errors) ====
    module M
     
    {
     
        import A = B;
        ~~~~~~~~~~~~~
!!! error TS2303: Circular definition of import alias 'A'.
     
        import B = A;
     
    }
    